test/e2e/fail/010-type-arity-lambda/expected.stderr
error[E0001]: type mismatch
 --> $FILE:2:1
  |
2 | id(1, 3);
  | ^^^^^^^^ expected `b -> b`, found `(Int, Int) -> c`
  |
